--- a/bin/gui/Login.fxml
+++ b/bin/gui/Login.fxml
@@ -37,5 +37,6 @@
             <PasswordField fx:id="passFieldSenha" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
+      <Button fx:id="btCadastrar" layoutX="225.0" layoutY="137.0" mnemonicParsing="false" onAction="#obBtCadastrarAction" text="Inscreva-se" />
    </children>
 </AnchorPane>
